--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -63,17 +63,20 @@ spec:
               containerPort: 4810
               protocol: TCP
             {{- end }}
-            {{- if eq .Values.phoebusservice "olog" }}
+            - name: rest
+               containerPort: 8080
+               protocol: TCP
+            # {{- if eq .Values.phoebusservice "olog" }}
             
-            {{- if .Values.service.http.enable }}
-            - name: rest
-              containerPort: 8080
-              protocol: TCP
-            {{- else }}
-            - name: rest
-              containerPort: 8181
-              protocol: TCP
-            {{- end }}
+            # {{- if .Values.service.http.enable }}
+            # - name: rest
+            #   containerPort: 8080
+            #   protocol: TCP
+            # {{- else }}
+            # - name: rest
+            #   containerPort: 8181
+            #   protocol: TCP
+            # {{- end }}
             {{- end }}
 
             
