--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -137,9 +137,9 @@ spec:
                 ## needs kafka
                 cd /alarmserver
 
-                settings="-Dspring.config.location=file:/config/alarm.properties /alarmserver/service-alarm-server.jar -noshell -server {{.Values.kafka.host}}:{{.Values.kafka.port}} -config {{.Values.alarm.config}} -settings /phoebus/phoebus_settings.ini"
+                settings="-Dspring.config.location=file:/config/alarm.properties /alarmserver/service-alarm-server.jar -noshell -server {{.Values.kafka.host}}:{{.Values.kafka.port}} -config {{.Values.alarm.config}}"
                 if [ -e /gitconfig/alarm_configuration.xml ];then
-                  settings="$settings -import /gitconfig/alarm_configuration.xml"
+                  java -jar $settings -import /gitconfig/alarm_configuration.xml
                 fi
                 echo "starting java -jar $settings"
                 java -jar $settings
