--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -137,7 +137,7 @@ spec:
                 ## needs kafka
                 cd /alarmserver
 
-                settings="-Dspring.config.location=file:/config/alarm.properties /alarmserver/service-alarm-server.jar -noshell -server {{.Values.kafka.host}}:{{.Values.kafka.port}} -config {{.Values.alarm.config}}"
+                settings="-Dspring.config.location=file:/config/alarm.properties /alarmserver/service-alarm-server.jar -noshell -server {{.Values.kafka.host}}:{{.Values.kafka.port}} -config {{.Values.alarm.config}} -settings /phoebus/phoebus_settings.ini"
                 if [ -e /gitconfig/alarm_configuration.xml ];then
                   java -jar $settings -import /gitconfig/alarm_configuration.xml
                 fi
