--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -136,11 +136,12 @@ spec:
               if [ "{{ .Values.phoebusservice }}" = "alarmserver" ]; then
                 ## needs kafka
                 cd /alarmserver
-
-                settings="-Dspring.config.location=file:/config/alarm.properties /alarmserver/service-alarm-server.jar -noshell -server {{.Values.kafka.host}}:{{.Values.kafka.port}} -config {{.Values.alarm.config}} -settings /phoebus/phoebus_settings.ini"
-                if [ -e /gitconfig/alarm_configuration.xml ];then
-                  java -jar $settings -import /gitconfig/alarm_configuration.xml
-                fi
+                echo "org.phoebus.pv.ca/addr_list=gateway.{{.Values.beamline}}" > phoebus.ini
+                echo "org.phoebus.pv.ca/auto_addr_list=false" >> phoebus.ini 
+                settings="-Dspring.config.location=file:/config/alarm.properties /alarmserver/service-alarm-server.jar -noshell -server {{.Values.kafka.host}}:{{.Values.kafka.port}} -config {{.Values.alarm.config}} -settings phoebus.ini"
+                # if [ -e /gitconfig/alarm_configuration.xml ];then
+                #   java -jar $settings -import /gitconfig/alarm_configuration.xml
+                # fi
                 echo "starting java -jar $settings"
                 java -jar $settings
               fi
