adding webalarm service

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -123,7 +123,7 @@ spec:
               export ALARM_CONFIG={{.Values.alarm.config}}
               echo "* Alarm WebMon"
                 cp /webapps/alrmwebmon/alarm-webmon.war /usr/local/tomcat/webapps
-                catalina.sh start
+                /opt/java/openjdk/bin/java -Djava.util.logging.config.file=/usr/local/tomcat/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djdk.tls.ephemeralDHKeySize=2048 -Djava.protocol.handler.pkgs=org.apache.catalina.webresources -Dorg.apache.catalina.security.SecurityListener.UMASK=0027 -Dignore.endorsed.dirs= -classpath /usr/local/tomcat/bin/bootstrap.jar:/usr/local/tomcat/bin/tomcat-juli.jar -Dcatalina.base=/usr/local/tomcat -Dcatalina.home=/usr/local/tomcat -Djava.io.tmpdir=/usr/local/tomcat/temp org.apache.catalina.startup.Bootstrap start
               fi
 
               if [ "{{ .Values.phoebusservice }}" = "saveandrestore" ]; then
