--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -120,7 +120,7 @@ spec:
               echo "EPICS_CA_ADDR_LIST=$EPICS_CA_ADDR_LIST"
               if [ "{{ .Values.phoebusservice }}" = "dbwr" ]; then
                 cp /webapps/dbwr/dbwr.war /usr/local/tomcat/webapps
-                export PVWS_HOST={{.Values.pws.host}}:{{.Values.pws.port}}
+                export PVWS_HOST={{.Values.pvws.host}}:{{.Values.pvws.port}}
                 echo "* dbwr pvws $PVWS_HOST"
 
                 /opt/java/openjdk/bin/java -Djava.util.logging.config.file=/usr/local/tomcat/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djdk.tls.ephemeralDHKeySize=2048 -Djava.protocol.handler.pkgs=org.apache.catalina.webresources -Dorg.apache.catalina.security.SecurityListener.UMASK=0027 -Dignore.endorsed.dirs= -classpath /usr/local/tomcat/bin/bootstrap.jar:/usr/local/tomcat/bin/tomcat-juli.jar -Dcatalina.base=/usr/local/tomcat -Dcatalina.home=/usr/local/tomcat -Djava.io.tmpdir=/usr/local/tomcat/temp org.apache.catalina.startup.Bootstrap start
