--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -6,6 +6,11 @@ metadata:
     {{- include "phoebus-services-chart.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  {{- if .Values.staticIP }}
+  clusterIP: {{.Values.staticIP}}
+  {{- else }}
+  clusterIP: None
+  {{- end }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: rest
